<resources>
<!--    <string name="app_name">Unit Converter</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_length">Length Activity</string>
    <string name="title_activity_number">Number Activity</string>
    <string name="title_activity_volume">Volume Activity</string>
    <string name="title_activity_temperature">Temperature Activity</string>
    <string name="title_activity_area">Area Activity</string>
    <string name="title_activity_currency">Currency Activity</string>
    <string name="main_menu">CONVERSION</string>
    <string name="length_converter">Length Converter</string>
    <string name="number_converter">Number Converter</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="area_converter">Area Converter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="volume_converter">Volume Converter</string>

    <string name="app_name">Calculator Ultimate</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
