<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/main_menu">
            <menu>
                <item
                    android:id="@+id/nav_main"
                    android:icon="@drawable/ic_ac_unit"
                    android:title="@string/temperature_converter" />
                <item
                    android:id="@+id/nav_length"
                    android:icon="@drawable/ic_directions_car"
                    android:title="@string/length_converter" />
                <item
                    android:id="@+id/nav_number"
                    android:icon="@drawable/ic_filter_1"
                    android:title="@string/number_converter" />
                <item
                    android:id="@+id/nav_volume"
                    android:icon="@drawable/ic_baseline_water_24"
                    android:title="@string/volume_converter" />
                <item
                    android:id="@+id/nav_area"
                    android:icon="@drawable/ic_baseline_area_chart_24"
                    android:title="@string/area_converter" />
<!--                <item-->
<!--                    android:id="@+id/nav_currency"-->
<!--                    android:icon="@drawable/baseline_currency_exchange_24"-->
<!--                    android:title="@string/currency_converter" />-->
            </menu>
        </item>
    </group>
</menu>
